Closed
Bug 1241480
Opened 10 years ago
Closed 10 years ago
Build bustage of Jan 21, 2016 in nsMsgComposeSecure.cpp caused by bug 1239455.
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 46.0
People
(Reporter: jorgk-bmo, Assigned: jorgk-bmo)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
3.62 KB,
patch
|
mkmelin
:
review+
|
Details | Diff | Splinter Review |
Mac compile error:
mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:908:51: error: too few arguments to function call, expected at least 6, have 5
Windows:
build/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp(908) : error C2660: 'mozilla::psm::CertVerifier::VerifyCert' : function does not take 5 arguments
Linux:
mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:908:51: error: no matching function for call to 'mozilla::psm::SharedCertVerifier::VerifyCert(CERTCertificate*, int, mozilla::pkix::Time, std::nullptr_t, std::nullptr_t)'
https://dxr.mozilla.org/comm-central/source/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp#908
Offending changeset:
https://hg.mozilla.org/mozilla-central/rev/bb6bfd172d6e
https://hg.mozilla.org/mozilla-central/diff/bb6bfd172d6e/security/certverifier/CertVerifier.cpp#l1.76
| Assignee | ||
Comment 1•10 years ago
|
||
Patch coming up, need to wait for local compile.
| Assignee | ||
Comment 2•10 years ago
|
||
This fixes the bustage to do with the CertVerifier::VerifyCert().
Next there are compile problems in TestAudioSegment.cpp, at least on Windows:
1:55.39 C:\vs2013\VC\INCLUDE\xutility(1278) : error C2065: 'initializer_list' : undeclared identifier
1:55.39 C:\vs2013\VC\INCLUDE\xutility(1278) : error C2065: '_Ilist' : undeclared identifier
1:55.39 C:\vs2013\VC\INCLUDE\xutility(1281) : error C2433: 'rbegin' : 'inline' not permitted on data declarations
1:55.40 C:\vs2013\VC\INCLUDE\xutility(1281) : error C2365: 'std::rbegin' : redefinition; previous definition was 'function'
1:55.40 C:\vs2013\VC\INCLUDE\xutility(1281) : error C2998: 'std::reverse_iterator<const _Elem*> std::rbegin' : cannot be a template definition
1:55.40 C:\vs2013\VC\INCLUDE\xutility(1284) : error C2065: 'initializer_list' : undeclared identifier
1:55.40 C:\vs2013\VC\INCLUDE\xutility(1284) : error C2065: '_Ilist' : undeclared identifier
1:55.40 C:\vs2013\VC\INCLUDE\xutility(1287) : error C2433: 'rend' : 'inline' not permitted on data declarations
1:55.41 C:\vs2013\VC\INCLUDE\xutility(1287) : error C2365: 'std::rend' : redefinition; previous definition was 'function'
1:55.41 C:\vs2013\VC\INCLUDE\xutility(1287) : error C2998: 'std::reverse_iterator<const _Elem*> std::rend' : cannot be a template definition
Perhaps someone can look into these.
Updated•10 years ago
|
Attachment #8710501 -
Flags: review?(mkmelin+mozilla)
Comment 3•10 years ago
|
||
(In reply to Jorg K (GMT+1) from comment #2)
> Next there are compile problems in TestAudioSegment.cpp, at least on Windows:
> 1:55.41 C:\vs2013\VC\INCLUDE\xutility(1287) : error C2998:
> 'std::reverse_iterator<const _Elem*> std::rend' : cannot be a template
> definition
:-( Sounds like a separate bug.
| Assignee | ||
Comment 4•10 years ago
|
||
OK, here's a try run:
https://treeherder.mozilla.org/#/jobs?repo=try-comm-central&revision=5e0c4a0a7c37
I want to see whether this compiles now and the std error is only my problems (to be solved by clobbering).
Comment 5•10 years ago
|
||
Comment on attachment 8710501 [details] [diff] [review]
Bustage fix (v1).
Review of attachment 8710501 [details] [diff] [review]:
-----------------------------------------------------------------
Thx! r=mkmelin
Will land it shortly
Attachment #8710501 -
Flags: review?(mkmelin+mozilla) → review+
Comment 6•10 years ago
|
||
Assignee: nobody → mozilla
Severity: normal → blocker
Status: NEW → RESOLVED
Closed: 10 years ago
Keywords: regression
Resolution: --- → FIXED
Comment 7•10 years ago
|
||
(at least for linux the compile succeeds w/ this)
Comment 8•10 years ago
|
||
What is this new parameter for?
| Assignee | ||
Comment 9•10 years ago
|
||
(In reply to Magnus Melin from comment #7)
> (at least for linux the compile succeeds w/ this)
My try for Windows fell over, so perhaps your push has more luck.
(In reply to aleth [:aleth] from comment #8)
> What is this new parameter for?
No idea, ask the author in the other bug.
Updated•10 years ago
|
Target Milestone: --- → Thunderbird 46.0
| Assignee | ||
Comment 10•10 years ago
|
||
Complete rebuild fixed the std problems from the bottom comment #2. Case closed.
| Assignee | ||
Comment 11•10 years ago
|
||
Take note: Bug 1239455 that caused the compile problem asked for Aurora uplift. If they uplift, this needs to be uplifted too.
You need to log in
before you can comment on or make changes to this bug.
Description
•