Bug 1241480 - Bustage fix in nsMsgComposeSecure.cpp caused by bug 1239455. r=mkmelin a=bustage-fix on CLOSED TREE